cmake_minimum_required(VERSION 3.27)
project(untitled1 C)

set(CMAKE_C_STANDARD 11)

add_executable(untitled1 main.c
        loc.c
        loc.h
        moves.c
        moves.h
        map.c
        map.h
        queue.c
        queue.h
        tree.c
        tree.h
        main.c
        parcoursLargeur.h
        map.h
        map.c
        moves.h
        loc.h
        moves.c
        tree.h
        tree.c
        parcoursLargeur.c
        loc.c
        map.c
        map.h
        queue.c
        queue.c
        main.c
        stack.h
        stack.c)
